# chunizm

./: .gitignore  TODO.md  chunizm.cabal  info.dhall
app/: Config.hs  DB.hs  Error.hs  Info.hs  Main.hs  Puzzle.hs  Repl.hs  Resources.hs  Util.hs
app/Config/: Types.hs
app/Player/: Types.hs
app/Puzzle/: Attempt.hs  Gen.hs  Reveal.hs  Show.hs  Types.hs
app/Repl/: Commands.hs  Stateful.hs  Types.hs
lib/Game/: Chunizm.hs
lib/Game/Chunizm/: Repl.hs
lib/Game/Chunizm/Board/: Gen.hs  Reveal.hs  Show.hs  Try.hs
lib/Game/Chunizm/Board/Reveal/: Char.hs
lib/Game/Chunizm/Config/: Encode.hs  Load.hs  Override.hs  Parse.hs
lib/Game/Chunizm/Config/Encode/: Dhall.hs
lib/Game/Chunizm/Config/Override/: Dhall.hs
lib/Game/Chunizm/Config/Parse/: Dhall.hs
lib/Game/Chunizm/Core/: Types.hs
lib/Game/Chunizm/Core/Util/: Transformers.hs
lib/Game/Chunizm/DataSource/: Parse.hs  Take.hs
lib/Game/Chunizm/Errors/: Show.hs
lib/Game/Chunizm/Repl/: Confirm.hs  Interrupt.hs  PrintClip.hs
lib/Game/Chunizm/Repl/Commands/: Collection.hs  CommandSet.hs  Parse.hs  Run.hs
lib/Game/Chunizm/Round/: Gen.hs
resources/: defaults.dhall  errors.dhall  info.dhall
test/: Canonical.hs  Main.hs  Show.hs
