cabal-version:      3.0
name:               chunizm
version:            0.1.0.0
author:             Futar
maintainer:         Futarimiti@163.com
category:           Game
build-type:         Simple
data-dir:           resources
data-files:         info.dhall
                  , defaults.dhall

common warnings
    ghc-options: -Wall

executable chunizm
    import:           warnings
    main-is:          Main.hs
    other-modules:    Config
                    , Config.Types
                    , Player.Types
                    , Info
                    , Repl.Types
                    , Repl.Stateful
                    , Repl.Commands
                    , Error
                    , Puzzle.Attempt
                    , Puzzle.Types
                    , Puzzle.Show
                    , Puzzle.Gen
                    , Puzzle.Reveal
                    , Util
                    , Paths_chunizm
                    , DB
    build-depends:    base
                    , filepath
                    , directory
                    , dhall
                    , unicode-data
                    , transformers
                    , text
                    , unix
                    , safe
                    , rando
                    , Hclip
                    , containers
    hs-source-dirs:   app
    default-language: Haskell2010
